--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@
 
 
     <!-- Newsletter Popup -->
-    <div id="popup-overlay" class="hidden-newsletter">
+    <div id="popup-overlay" class="hidden-newsletter d-none">
         <div class="popup">
             <span class="close-btn" id="close-popup"><i class="fa-solid fa-xmark"></i></span>
             <div class="newsletter-thumb d-md-block d-none">
