--- a/src/blog-details.html
+++ b/src/blog-details.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Agriculturio is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
+    <meta name="description" content="WellHub is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="assets/fonts/hugeicon.min.css" />
     <link rel="stylesheet" href="./assets/css/swiper.min.css" />
     <link rel="stylesheet" href="./assets/css/glightbox.css" />
-    <title>Blog Details - Agriculturio - Agriculture &amp; Organic Farm HTML Theme</title>
+    <title>Blog Details - WellHub - Agriculture &amp; Organic Farm HTML Theme</title>
   </head>
 
   <body>
@@ -79,7 +79,7 @@
                   <p class="text-2xl font-semibold text-neutral-900 mb-5">Farming sustainably today ensures a greener, healthier tomorrow for future generations.</p>
                   <span class="block h-1 w-16 bg-green-500 mb-5"></span>
                   <div>
-                    <p class="text-neutral-600 text-sm mb-1">Agriculturio Member</p>
+                    <p class="text-neutral-600 text-sm mb-1">WellHub Member</p>
                     <p class="font-semibold">DR. EMMA CARTER</p>
                   </div>
                 </div>
