--- a/src/contact-us.html
+++ b/src/contact-us.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Agriculturio is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
+    <meta name="description" content="WellHub is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./assets/css/swiper.min.css" />
     <link rel="stylesheet" href="./assets/css/glightbox.css" />
     <link rel="stylesheet" href="./assets/libs/slim-select/slim-select.min.css" />
-    <title>Contact Us - Agriculturio - Agriculture &amp; Organic Farm HTML Theme</title>
+    <title>Contact Us - WellHub - Agriculture &amp; Organic Farm HTML Theme</title>
   </head>
 
   <body>
@@ -74,7 +74,7 @@
                   </div>
                   <div>
                     <p class="text-neutral-0 text-sm mb-1">Email Address</p>
-                    <p class="font-medium text-neutral-0">info@agriculturio.com</p>
+                    <p class="font-medium text-neutral-0">info@WellHub.com</p>
                   </div>
                 </div>
                 <div class="flex items-center gap-4">
