--- a/src/index-3.html
+++ b/src/index-3.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Agriculturio is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
+    <meta name="description" content="WellHub is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="assets/fonts/hugeicon.min.css" />
     <link rel="stylesheet" href="./assets/css/swiper.min.css" />
     <link rel="stylesheet" href="./assets/css/glightbox.css" />
-    <title>Home - Agriculturio - Agriculture &amp; Organic Farm HTML Theme</title>
+    <title>Home - WellHub - Agriculture &amp; Organic Farm HTML Theme</title>
   </head>
 
   <body>
@@ -85,7 +85,7 @@
           </li>
         </ul>
         <div class="flex items-center gap-4">
-          <a href="contact-us.html" class="btn-primary max-xl:!hidden">Get In Touch!<i class="hgi-stroke hgi-arrow-up-right-01 text-neutral-700"></i></a>
+          <a href="contact-us.html" class="btn-primary max-xl:!hidden group">Get In Touch!<i class="hgi-stroke hgi-arrow-up-right-01 text-neutral-700 group-hover:rotate-[45deg] duration-300"></i></a>
           <div>
             <button aria-label="Search Button" class="topbar-btn search-btn"><i class="hgi-stroke hgi-search-01"></i></button>
             <div class="search-bar">
@@ -132,7 +132,7 @@
       <div class="left-col">
         <div class="grid grid-cols-12 gap-6 items-center">
           <div class="col-span-12 lg:col-span-6 xxl:col-span-5 py-8">
-            <p class="sub-heading mb-3 fade_anim" data-delay=".3">Welcome To Agriculturio</p>
+            <p class="sub-heading mb-3 fade_anim" data-delay=".3">Welcome To WellHub</p>
             <h1 class="mb-10 xl:mb-14 heading">Harvesting Nature, Delivering Freshness</h1>
             <div class="flex items-center max-sm:flex-wrap gap-4 xl:gap-6 xxl:gap-10 mb-10 xl:mb-14 fade_anim" data-delay=".8">
               <img src="./assets/images/milk.webp" class="rounded-xl" alt="" />
@@ -257,9 +257,9 @@
     <!-- horizontal text animation start -->
     <section class="relative z-[1]">
       <div class="animated-text-strip reveal_anim">
-        <span class="marquee big-text">AgriculturioAgriculturio</span>
-        <span class="marquee big-text">AgriculturioAgriculturio</span>
-        <span class="marquee big-text">AgriculturioAgriculturio</span>
+        <span class="marquee big-text">WellHubWellHub</span>
+        <span class="marquee big-text">WellHubWellHub</span>
+        <span class="marquee big-text">WellHubWellHub</span>
       </div>
     </section>
     <!-- horizontal text animation end -->
