--- a/src/index-4.html
+++ b/src/index-4.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Agriculturio is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
+    <meta name="description" content="WellHub is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="assets/fonts/hugeicon.min.css" />
     <link rel="stylesheet" href="./assets/css/swiper.min.css" />
     <link rel="stylesheet" href="./assets/css/glightbox.css" />
-    <title>Home - Agriculturio - Agriculture &amp; Organic Farm HTML Theme</title>
+    <title>Home - WellHub - Agriculture &amp; Organic Farm HTML Theme</title>
   </head>
 
   <body>
@@ -92,7 +92,7 @@
           </li>
         </ul>
         <div class="flex items-center gap-4">
-          <a href="contact-us.html" class="btn-primary max-xl:!hidden">Get In Touch!<i class="hgi-stroke hgi-arrow-up-right-01 text-neutral-700"></i></a>
+          <a href="contact-us.html" class="btn-primary max-xl:!hidden group">Get In Touch!<i class="hgi-stroke hgi-arrow-up-right-01 text-neutral-700 group-hover:rotate-[45deg] duration-300"></i></a>
           <div>
             <button class="topbar-btn search-btn bg-neutral-0/5 backdrop-blur-md border-neutral-30"><i class="hgi-stroke hgi-search-01"></i></button>
             <div class="search-bar">
@@ -185,7 +185,7 @@
             <img src="./assets/images/about4-2.webp" data-reveal-from="right" class="reveal_anim rounded-2xl border-2 border-neutral-0 absolute bottom-0 lg:-bottom-5 right-0" alt="" />
           </div>
           <div class="col-span-12 md:col-span-6 md:col-start-7">
-            <p class="sub-heading mb-3 blur_anim">About Agriculturio</p>
+            <p class="sub-heading mb-3 blur_anim">About WellHub</p>
             <h1 class="mb-4 reveal_anim">Your Trusted Partner in Agro Excellence</h1>
             <p class="text-neutral-600 mb-7 xl:mb-10">We are committed to empowering farmers with innovative solutions, sustainable practices, and reliable support, ensuring growth and prosperity for agricultural communities worldwide.</p>
             <div class="space-y-6 mb-10 xl:mb-14">
@@ -784,9 +784,9 @@
     <!-- horizontal text animation start -->
     <section class="relative z-[1]">
       <div class="animated-text-strip reveal_anim" data-duration="1.5">
-        <span class="marquee big-text">AgriculturioAgriculturio</span>
-        <span class="marquee big-text">AgriculturioAgriculturio</span>
-        <span class="marquee big-text">AgriculturioAgriculturio</span>
+        <span class="marquee big-text">WellHubWellHub</span>
+        <span class="marquee big-text">WellHubWellHub</span>
+        <span class="marquee big-text">WellHubWellHub</span>
       </div>
     </section>
     <!-- horizontal text animation end -->
