--- a/src/privacy-policy.html
+++ b/src/privacy-policy.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Agriculturio is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
+    <meta name="description" content="WellHub is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./assets/css/swiper.min.css" />
     <link rel="stylesheet" href="./assets/css/glightbox.css" />
     <link rel="stylesheet" href="./assets/libs/slim-select/slim-select.min.css" />
-    <title>Privacy Policy - Agriculturio - Agriculture &amp; Organic Farm HTML Theme</title>
+    <title>Privacy Policy - WellHub - Agriculture &amp; Organic Farm HTML Theme</title>
   </head>
 
   <body>
@@ -52,7 +52,7 @@
                 </p>
 
                 <p class="mb-10 xl:mb-12 text-lg leading-relaxed">
-                  At <strong>Agriculturio</strong>, safeguarding your privacy is our top priority. This Privacy Policy explains how we gather, utilize, and secure your personal data when you visit our website and engage with our services. We collect information to enhance your experience and ensure our services meet your needs.
+                  At <strong>WellHub</strong>, safeguarding your privacy is our top priority. This Privacy Policy explains how we gather, utilize, and secure your personal data when you visit our website and engage with our services. We collect information to enhance your experience and ensure our services meet your needs.
                 </p>
                 <p class="mb-10 xl:mb-12 text-lg leading-relaxed">
                   Your data is protected through stringent security measures, and we only share it with trusted partners when necessary. By using our website, you consent to the practices described in this policy. We encourage you to review this document regularly, as we may update it to reflect changes in our practices or for legal compliance.
@@ -96,7 +96,7 @@
               <h2 class="mb-3">Terms and Conditions</h2>
               <p class="flex items-center gap-2 font-medium mb-6"><i class="hgi-stroke hgi-calendar-03 text-xl text-yellow-300"></i> Last Updated: January 2025</p>
               <p class="mb-7 xl:mb-10">
-                Welcome to Agriculturio! These Terms and Conditions govern your use of our website and services. By accessing or using our website, you agree to comply with and be bound by these terms. Please read them carefully before using our site. If you do not agree with any part of these terms, you should discontinue use of our services.
+                Welcome to WellHub! These Terms and Conditions govern your use of our website and services. By accessing or using our website, you agree to comply with and be bound by these terms. Please read them carefully before using our site. If you do not agree with any part of these terms, you should discontinue use of our services.
               </p>
 
               <h3 class="mb-6">Use of Our Services</h3>
@@ -122,16 +122,16 @@
               </p>
 
               <h3 class="mb-6">Intellectual Property</h3>
-              <p class="mb-7 xl:mb-10">All content, trademarks, logos, and materials on our website are owned by Agriculturio or its affiliates and are protected by intellectual property laws. You agree not to use, copy, or distribute any of our content without express written permission.</p>
+              <p class="mb-7 xl:mb-10">All content, trademarks, logos, and materials on our website are owned by WellHub or its affiliates and are protected by intellectual property laws. You agree not to use, copy, or distribute any of our content without express written permission.</p>
 
               <h3 class="mb-6">Limitation of Liability</h3>
-              <p class="mb-7 xl:mb-10">Agriculturio is not liable for any direct, indirect, incidental, or consequential damages arising from your use of our website or services. While we take reasonable steps to ensure the accuracy and security of our content, we make no guarantees regarding its availability or reliability.</p>
+              <p class="mb-7 xl:mb-10">WellHub is not liable for any direct, indirect, incidental, or consequential damages arising from your use of our website or services. While we take reasonable steps to ensure the accuracy and security of our content, we make no guarantees regarding its availability or reliability.</p>
 
               <h3 class="mb-6">Termination</h3>
               <p class="mb-7 xl:mb-10">We reserve the right to suspend or terminate your access to our website at any time, without notice, for any violation of these terms or for any reason at our discretion. Upon termination, your rights to access our services will immediately cease.</p>
 
               <h3 class="mb-6">Governing Law</h3>
-              <p class="mb-7 xl:mb-10">These Terms and Conditions shall be governed by and construed in accordance with the laws of the jurisdiction in which Agriculturio operates, without regard to its conflict of law principles.</p>
+              <p class="mb-7 xl:mb-10">These Terms and Conditions shall be governed by and construed in accordance with the laws of the jurisdiction in which WellHub operates, without regard to its conflict of law principles.</p>
 
               <h3 class="mb-6">Changes to Terms and Conditions</h3>
               <p class="mb-7 xl:mb-10">We may update these Terms and Conditions from time to time to reflect changes in our practices or for legal compliance. It is recommended that you review this page periodically for any updates. Your continued use of our services after changes have been made signifies your acceptance of the new terms.</p>
@@ -142,7 +142,7 @@
             <div class="tab-panel hidden">
               <h2 class="mb-3">Warranty Policy</h2>
               <p class="flex items-center gap-2 font-medium mb-6"><i class="hgi-stroke hgi-calendar-03 text-xl text-yellow-300"></i> Last Updated: January 2025</p>
-              <p class="mb-7 xl:mb-10">At Agriculturio, we are committed to providing high-quality products and ensuring customer satisfaction. This Warranty Policy explains the terms under which we offer a warranty for the products you purchase from us. By making a purchase, you agree to the terms of this policy.</p>
+              <p class="mb-7 xl:mb-10">At WellHub, we are committed to providing high-quality products and ensuring customer satisfaction. This Warranty Policy explains the terms under which we offer a warranty for the products you purchase from us. By making a purchase, you agree to the terms of this policy.</p>
 
               <h3 class="mb-6">Warranty Coverage</h3>
               <p class="mb-4">Our products come with a warranty that covers manufacturing defects and issues that occur under normal usage conditions. The warranty period begins from the date of purchase and lasts for:</p>
@@ -175,7 +175,7 @@
 
               <h3 class="mb-6">Limitation of Warranty</h3>
               <p class="mb-7 xl:mb-10">
-                This warranty is limited to the original purchaser of the product and is not transferable. It is the only warranty offered by Agriculturio and supersedes any prior agreements or warranties. In no event will Agriculturio be liable for any indirect, incidental, or consequential damages arising from the use of the product.
+                This warranty is limited to the original purchaser of the product and is not transferable. It is the only warranty offered by WellHub and supersedes any prior agreements or warranties. In no event will WellHub be liable for any indirect, incidental, or consequential damages arising from the use of the product.
               </p>
 
               <h3 class="mb-6">Warranty Policy Updates</h3>
@@ -184,7 +184,7 @@
             <div class="tab-panel hidden">
               <h2 class="mb-3">Shipping and Delivery Policy</h2>
               <p class="flex items-center gap-2 font-medium mb-6"><i class="hgi-stroke hgi-calendar-03 text-xl text-yellow-300"></i> Last Updated: January 2025</p>
-              <p class="mb-7 xl:mb-10">At Agriculturio, we strive to deliver your products in a timely and efficient manner. This Shipping and Delivery Policy outlines our shipping practices, delivery options, and the terms under which we fulfill orders. By purchasing from our website, you agree to the following terms.</p>
+              <p class="mb-7 xl:mb-10">At WellHub, we strive to deliver your products in a timely and efficient manner. This Shipping and Delivery Policy outlines our shipping practices, delivery options, and the terms under which we fulfill orders. By purchasing from our website, you agree to the following terms.</p>
 
               <h3 class="mb-6">Shipping Locations</h3>
               <p class="mb-4">We currently offer shipping to the following locations:</p>
