--- a/src/request-quote.html
+++ b/src/request-quote.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Agriculturio is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
+    <meta name="description" content="WellHub is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="assets/fonts/hugeicon.min.css" />
     <link rel="stylesheet" href="./assets/css/swiper.min.css" />
     <link rel="stylesheet" href="./assets/css/glightbox.css" />
-    <title>Request Quote - Agriculturio - Agriculture &amp; Organic Farm HTML Theme</title>
+    <title>Request Quote - WellHub - Agriculture &amp; Organic Farm HTML Theme</title>
   </head>
 
   <body>
@@ -93,7 +93,7 @@
         <div class="relative h-[250px] overflow-hidden mb-10 xl:mb-14">
           <svg class="absolute w-full h-full">
             <clippath id="text-overlay">
-              <text x="50%" y="50%" dy="0.35em" text-anchor="middle" data-duration="1.5" data-reveal-from="left" class="reveal_anim font-roboto font-black uppercase text-[13vw]">Agriculturio</text>
+              <text x="50%" y="50%" dy="0.35em" text-anchor="middle" data-duration="1.5" data-reveal-from="left" class="reveal_anim font-roboto font-black uppercase text-[13vw]">WellHub</text>
             </clippath>
           </svg>
           <video class="clipped-video w-full" muted loop autoplay>
