--- a/src/shop-details.html
+++ b/src/shop-details.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Agriculturio is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
+    <meta name="description" content="WellHub is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./assets/css/swiper.min.css" />
     <link rel="stylesheet" href="./assets/css/glightbox.css" />
     <link rel="stylesheet" href="./assets/css/slim-select.min.css" />
-    <title>Shop Details - Agriculturio - Agriculture &amp; Organic Farm HTML Theme</title>
+    <title>Shop Details - WellHub - Agriculture &amp; Organic Farm HTML Theme</title>
   </head>
 
   <body>
@@ -322,7 +322,7 @@
               <div class="size-[158px] absolute -bottom-[30%] rounded-full -right-[20%] bg-neutral-0/10"></div>
               <div class="size-[158px] absolute -top-[30%] rounded-full -left-[20%] bg-neutral-0/10"></div>
               <div class="flex flex-col items-center">
-                <h1 class="text-neutral-0 mb-6">Agriculturio</h1>
+                <h1 class="text-neutral-0 mb-6">WellHub</h1>
                 <a href="shop.html" class="btn-primary !bg-neutral-0 !text-neutral-900">Shop Now <i class="hgi-stroke hgi-arrow-right-01"></i></a>
               </div>
             </div>
