--- a/src/about-us.html
+++ b/src/about-us.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Agriculturio is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
+    <meta name="description" content="WellHub is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="assets/fonts/hugeicon.min.css" />
     <link rel="stylesheet" href="./assets/css/swiper.min.css" />
     <link rel="stylesheet" href="./assets/css/glightbox.css" />
-    <title>Home - Agriculturio - Agriculture &amp; Organic Farm HTML Theme</title>
+    <title>Home - WellHub - Agriculture &amp; Organic Farm HTML Theme</title>
   </head>
 
   <body>
@@ -62,7 +62,7 @@
         <div class="relative h-[250px] overflow-hidden mb-10 xl:mb-14">
           <svg class="absolute w-full h-full">
             <clippath id="text-overlay">
-              <text x="50%" y="50%" dy="0.35em" text-anchor="middle" data-duration="1.5" data-reveal-from="left" class="reveal_anim font-roboto font-black uppercase text-[13vw]">Agriculturio</text>
+              <text x="50%" y="50%" dy="0.35em" text-anchor="middle" data-duration="1.5" data-reveal-from="left" class="reveal_anim font-roboto font-black uppercase text-[13vw]">WellHub</text>
             </clippath>
           </svg>
           <video class="clipped-video w-full" muted loop autoplay>
@@ -323,7 +323,7 @@
               <div class="col-span-12 md:col-span-7">
                 <h2 class="mb-3 xl:mb-4 max-w-md">Growing with Purpose and Integrity</h2>
                 <p class="text-neutral-600 mb-7 xl:mb-10">
-                  At Agriculturio, our mission is to cultivate high-quality, sustainable crops while promoting eco-friendly farming practices. We are dedicated to providing fresh, healthy produce to our community, ensuring every step is environmentally responsible. By focusing on innovation, integrity, and care, we aim to inspire others to embrace
+                  At WellHub, our mission is to cultivate high-quality, sustainable crops while promoting eco-friendly farming practices. We are dedicated to providing fresh, healthy produce to our community, ensuring every step is environmentally responsible. By focusing on innovation, integrity, and care, we aim to inspire others to embrace
                   sustainable farming, creating a greener, healthier future for generations to come.
                 </p>
                 <a href="contact-us.html" class="btn-primary">get in touch <i class="hgi-stroke hgi-arrow-up-right-01"></i></a>
@@ -376,9 +376,9 @@
     <!-- horizontal text animation start -->
     <section class="relative z-[1] py-14 xl:py-28">
       <div class="animated-text-strip reveal_anim" data-duration="1.5">
-        <span class="marquee big-text">AgriculturioAgriculturio</span>
-        <span class="marquee big-text">AgriculturioAgriculturio</span>
-        <span class="marquee big-text">AgriculturioAgriculturio</span>
+        <span class="marquee big-text">WellHubWellHub</span>
+        <span class="marquee big-text">WellHubWellHub</span>
+        <span class="marquee big-text">WellHubWellHub</span>
       </div>
     </section>
     <!-- horizontal text animation end -->
