--- a/src/cart.html
+++ b/src/cart.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Agriculturio is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
+    <meta name="description" content="WellHub is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="assets/fonts/hugeicon.min.css" />
-    <title>Cart - Agriculturio - Agriculture &amp; Organic Farm HTML Theme</title>
+    <title>Cart - WellHub - Agriculture &amp; Organic Farm HTML Theme</title>
   </head>
 
   <body>
@@ -127,9 +127,9 @@
     <!-- horizontal text animation start -->
     <section class="relative z-[1] pb-14 xl:pb-28">
       <div class="animated-text-strip reveal_anim" data-duration="1.5">
-        <span class="marquee big-text">AgriculturioAgriculturio</span>
-        <span class="marquee big-text">AgriculturioAgriculturio</span>
-        <span class="marquee big-text">AgriculturioAgriculturio</span>
+        <span class="marquee big-text">WellHubWellHub</span>
+        <span class="marquee big-text">WellHubWellHub</span>
+        <span class="marquee big-text">WellHubWellHub</span>
       </div>
     </section>
     <!-- horizontal text animation end -->
