--- a/src/faqs.html
+++ b/src/faqs.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Agriculturio is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
+    <meta name="description" content="WellHub is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="assets/fonts/hugeicon.min.css" />
     <link rel="stylesheet" href="./assets/css/swiper.min.css" />
     <link rel="stylesheet" href="./assets/css/glightbox.css" />
-    <title>Faqs - Agriculturio - Agriculture &amp; Organic Farm HTML Theme</title>
+    <title>Faqs - WellHub - Agriculture &amp; Organic Farm HTML Theme</title>
   </head>
 
   <body>
@@ -180,7 +180,7 @@
                         ></path>
                       </svg>
                     </div>
-                    <p class="text-neutral-900 font-medium lg:text-xl">With Agriculturio’s guidance, we’ve seen a significant improvement in crop production. Their eco-friendly practices and organic focus have allowed us to offer top-With Agriculturio’s guidance, we’ve seen</p>
+                    <p class="text-neutral-900 font-medium lg:text-xl">With WellHub’s guidance, we’ve seen a significant improvement in crop production. Their eco-friendly practices and organic focus have allowed us to offer top-With WellHub’s guidance, we’ve seen</p>
                   </div>
                 </div>
               </div>
@@ -220,7 +220,7 @@
                         ></path>
                       </svg>
                     </div>
-                    <p class="text-neutral-900 font-medium lg:text-xl">With Agriculturio’s guidance, we’ve seen a significant improvement in crop production. Their eco-friendly practices and organic focus have allowed us to offer top-With Agriculturio’s guidance, we’ve seen</p>
+                    <p class="text-neutral-900 font-medium lg:text-xl">With WellHub’s guidance, we’ve seen a significant improvement in crop production. Their eco-friendly practices and organic focus have allowed us to offer top-With WellHub’s guidance, we’ve seen</p>
                   </div>
                 </div>
               </div>
@@ -260,7 +260,7 @@
                         ></path>
                       </svg>
                     </div>
-                    <p class="text-neutral-900 font-medium lg:text-xl">With Agriculturio’s guidance, we’ve seen a significant improvement in crop production. Their eco-friendly practices and organic focus have allowed us to offer top-With Agriculturio’s guidance, we’ve seen</p>
+                    <p class="text-neutral-900 font-medium lg:text-xl">With WellHub’s guidance, we’ve seen a significant improvement in crop production. Their eco-friendly practices and organic focus have allowed us to offer top-With WellHub’s guidance, we’ve seen</p>
                   </div>
                 </div>
               </div>
