--- a/src/index-2.html
+++ b/src/index-2.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Agriculturio is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
+    <meta name="description" content="WellHub is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="assets/fonts/hugeicon.min.css" />
     <link rel="stylesheet" href="./assets/css/swiper.min.css" />
     <link rel="stylesheet" href="./assets/css/glightbox.css" />
-    <title>Home - Agriculturio - Agriculture &amp; Organic Farm HTML Theme</title>
+    <title>Home - WellHub - Agriculture &amp; Organic Farm HTML Theme</title>
   </head>
 
   <body>
@@ -28,7 +28,7 @@
     <section class="banner-two overflow-hidden bg-cover" data-bg="./assets/images/banner2-bg.webp">
       <div class="cont pt-32 pb-20 md:pb-28 xl:py-48 xxl:py-52 gap-4 grid grid-cols-12 items-end relative z-[2]">
         <div class="col-span-12 md:col-span-7">
-          <p class="small-text-1 text-xl text-neutral-0 mb-3">Welcome To Agriculturio</p>
+          <p class="small-text-1 text-xl text-neutral-0 mb-3">Welcome To WellHub</p>
           <h2 class="big-text one">Farm</h2>
           <h2 class="big-text md:hidden two">Simplified</h2>
         </div>
@@ -144,7 +144,7 @@
           <div class="size-76 absolute top-1/2 left-1/2 -translate-1/2 border border-neutral-0 rounded-full border-dashed"></div>
         </div>
         <div class="reveal_anim">
-          <p class="sub-heading text-neutral-0 border-neutral-700 mb-3">About Agriculturio</p>
+          <p class="sub-heading text-neutral-0 border-neutral-700 mb-3">About WellHub</p>
           <h2 class="h1 text-neutral-0 mb-4 xl:mb-6">Your Trusted Partner in Agro Excellence</h2>
           <p class="text-neutral-60 text-lg mb-6 xl:mb-10">We are committed to empowering farmers with innovative solutions, sustainable practices, and reliable support, ensuring growth and prosperity for agricultural communities worldwide.</p>
           <div class="space-y-6 mb-10 xl:mb-14">
@@ -219,9 +219,9 @@
     <!-- horizontal text animation start -->
     <section class="relative z-[1]">
       <div class="animated-text-strip reveal_anim" data-reveal-from="right">
-        <span class="marquee big-text">AgriculturioAgriculturio</span>
-        <span class="marquee big-text">AgriculturioAgriculturio</span>
-        <span class="marquee big-text">AgriculturioAgriculturio</span>
+        <span class="marquee big-text">WellHubWellHub</span>
+        <span class="marquee big-text">WellHubWellHub</span>
+        <span class="marquee big-text">WellHubWellHub</span>
       </div>
     </section>
     <!-- horizontal text animation end -->
@@ -377,7 +377,7 @@
               <div class="swiper-slide">
                 <div class="rounded-2xl bg-green-50 p-4 md:p-6 xl:p-7">
                   <div>
-                    <p class="mb-4 pb-4 xl:mb-8 xl:pb-8 text-neutral-500 lg:text-xl border-b border-dashed border-neutral-50">Agriculturio has revolutionized our farming experience. Their eco-friendly practices, premium organic products, and expert support ensure sustainable growth and exceptional quality.</p>
+                    <p class="mb-4 pb-4 xl:mb-8 xl:pb-8 text-neutral-500 lg:text-xl border-b border-dashed border-neutral-50">WellHub has revolutionized our farming experience. Their eco-friendly practices, premium organic products, and expert support ensure sustainable growth and exceptional quality.</p>
                     <div class="flex items-center gap-4 xl:gap-6">
                       <div class="relative shrink-0">
                         <div class="size-8 bg-yellow-200 f-center text-lg rounded-full absolute -top-2 -right-2">
@@ -396,7 +396,7 @@
               <div class="swiper-slide">
                 <div class="rounded-2xl bg-green-50 p-4 md:p-6 xl:p-7">
                   <div>
-                    <p class="mb-4 pb-4 xl:mb-8 xl:pb-8 text-neutral-500 lg:text-xl border-b border-dashed border-neutral-50">Agriculturio has revolutionized our farming experience. Their eco-friendly practices, premium organic products, and expert support ensure sustainable growth and exceptional quality.</p>
+                    <p class="mb-4 pb-4 xl:mb-8 xl:pb-8 text-neutral-500 lg:text-xl border-b border-dashed border-neutral-50">WellHub has revolutionized our farming experience. Their eco-friendly practices, premium organic products, and expert support ensure sustainable growth and exceptional quality.</p>
                     <div class="flex items-center gap-4 xl:gap-6">
                       <div class="relative shrink-0">
                         <div class="size-8 bg-yellow-200 f-center text-lg rounded-full absolute -top-2 -right-2">
@@ -415,7 +415,7 @@
               <div class="swiper-slide">
                 <div class="rounded-2xl bg-green-50 p-4 md:p-6 xl:p-7">
                   <div>
-                    <p class="mb-4 pb-4 xl:mb-8 xl:pb-8 text-neutral-500 lg:text-xl border-b border-dashed border-neutral-50">Agriculturio has revolutionized our farming experience. Their eco-friendly practices, premium organic products, and expert support ensure sustainable growth and exceptional quality.</p>
+                    <p class="mb-4 pb-4 xl:mb-8 xl:pb-8 text-neutral-500 lg:text-xl border-b border-dashed border-neutral-50">WellHub has revolutionized our farming experience. Their eco-friendly practices, premium organic products, and expert support ensure sustainable growth and exceptional quality.</p>
                     <div class="flex items-center gap-4 xl:gap-6">
                       <div class="relative shrink-0">
                         <div class="size-8 bg-yellow-200 f-center text-lg rounded-full absolute -top-2 -right-2">
@@ -434,7 +434,7 @@
               <div class="swiper-slide">
                 <div class="rounded-2xl bg-green-50 p-4 md:p-6 xl:p-7">
                   <div>
-                    <p class="mb-4 pb-4 xl:mb-8 xl:pb-8 text-neutral-500 lg:text-xl border-b border-dashed border-neutral-50">Agriculturio has revolutionized our farming experience. Their eco-friendly practices, premium organic products, and expert support ensure sustainable growth and exceptional quality.</p>
+                    <p class="mb-4 pb-4 xl:mb-8 xl:pb-8 text-neutral-500 lg:text-xl border-b border-dashed border-neutral-50">WellHub has revolutionized our farming experience. Their eco-friendly practices, premium organic products, and expert support ensure sustainable growth and exceptional quality.</p>
                     <div class="flex items-center gap-4 xl:gap-6">
                       <div class="relative shrink-0">
                         <div class="size-8 bg-yellow-200 f-center text-lg rounded-full absolute -top-2 -right-2">
@@ -716,7 +716,7 @@
     <section class="py-120 bg-no-repeat bg-cover relative after:absolute after:h-full after:inset-0 after:bg-neutral-900 after:opacity-20 after:xl:w-full" data-bg="assets/images/about2-bg.webp">
       <div class="cont">
         <div class="bg-green-500 border-2 border-neutral-0 rounded-xl px-4 py-6 xl:px-14 xl:py-32 max-w-[526px] relative z-[2]">
-          <p class="sub-heading mb-3 text-yellow-200 border-neutral-100 fade_anim">About Agriculturio</p>
+          <p class="sub-heading mb-3 text-yellow-200 border-neutral-100 fade_anim">About WellHub</p>
           <h1 class="text-neutral-0 mb-7 xl:mb-10 reveal_anim">If you need any Help Please contact!</h1>
           <div class="flex gap-4 items-center fade_anim" data-delay=".3">
             <div class="size-12 rounded-full bg-yellow-200 f-center text-neutral-900 text-2xl">
