--- a/src/index-5.html
+++ b/src/index-5.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Agriculturio is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
+    <meta name="description" content="WellHub is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="assets/fonts/hugeicon.min.css" />
     <link rel="stylesheet" href="./assets/css/swiper.min.css" />
     <link rel="stylesheet" href="./assets/css/glightbox.css" />
-    <title>Home - Agriculturio - Agriculture &amp; Organic Farm HTML Theme</title>
+    <title>Home - WellHub - Agriculture &amp; Organic Farm HTML Theme</title>
   </head>
 
   <body>
@@ -91,7 +91,7 @@
           </li>
         </ul>
         <div class="flex items-center gap-4">
-          <a href="contact-us.html" class="btn-primary max-xl:!hidden">Get In Touch!<i class="hgi-stroke hgi-arrow-up-right-01 text-neutral-700"></i></a>
+          <a href="contact-us.html" class="btn-primary max-xl:!hidden group">Get In Touch!<i class="hgi-stroke hgi-arrow-up-right-01 text-neutral-700 group-hover:rotate-[45deg] duration-300"></i></a>
           <div>
             <button aria-label="Search Button" class="topbar-btn search-btn"><i class="hgi-stroke hgi-search-01"></i></button>
             <div class="search-bar">
@@ -169,9 +169,9 @@
       <!-- horizontal text animation start -->
       <section class="absolute bottom-4 left-0 z-[1]">
         <div class="animated-text-strip reveal_anim" data-duration="1.5">
-          <span class="marquee big-text">AgriculturioAgriculturio</span>
-          <span class="marquee big-text">AgriculturioAgriculturio</span>
-          <span class="marquee big-text">AgriculturioAgriculturio</span>
+          <span class="marquee big-text">WellHubWellHub</span>
+          <span class="marquee big-text">WellHubWellHub</span>
+          <span class="marquee big-text">WellHubWellHub</span>
         </div>
       </section>
       <!-- horizontal text animation end -->
@@ -299,9 +299,9 @@
       <!-- horizontal text animation start -->
       <section class="absolute max-xxl:hidden left-2 4xl:left-6">
         <div class="animated-text-top">
-          <span class="marquee big-text">AgriculturioAgriculturio</span>
-          <span class="marquee big-text">AgriculturioAgriculturio</span>
-          <span class="marquee big-text">AgriculturioAgriculturio</span>
+          <span class="marquee big-text">WellHubWellHub</span>
+          <span class="marquee big-text">WellHubWellHub</span>
+          <span class="marquee big-text">WellHubWellHub</span>
         </div>
       </section>
       <!-- horizontal text animation end -->
