--- a/src/index-6.html
+++ b/src/index-6.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Agriculturio is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
+    <meta name="description" content="WellHub is a modern agriculture and organic farm theme designed for farmers, agribusiness, and organic food websites. Get a responsive, SEO-friendly design with farming-focused features." />
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="assets/fonts/hugeicon.min.css" />
     <link rel="stylesheet" href="./assets/css/swiper.min.css" />
     <link rel="stylesheet" href="./assets/css/glightbox.css" />
-    <title>Home - Agriculturio - Agriculture &amp; Organic Farm HTML Theme</title>
+    <title>Home - WellHub - Agriculture &amp; Organic Farm HTML Theme</title>
   </head>
 
   <body>
@@ -91,7 +91,7 @@
           </li>
         </ul>
         <div class="flex items-center gap-4">
-          <a href="contact-us.html" class="btn-primary max-xl:!hidden">Get In Touch!<i class="hgi-stroke hgi-arrow-up-right-01 text-neutral-700"></i></a>
+          <a href="contact-us.html" class="btn-primary max-xl:!hidden group">Get In Touch!<i class="hgi-stroke hgi-arrow-up-right-01 text-neutral-700 group-hover:rotate-[45deg] duration-300"></i></a>
           <div>
             <button aria-label="Search Button" class="topbar-btn search-btn"><i class="hgi-stroke hgi-search-01"></i></button>
             <div class="search-bar">
@@ -619,7 +619,7 @@
                         ></path>
                       </svg>
                     </div>
-                    <p class="text-neutral-900 font-medium lg:text-xl">With Agriculturio’s guidance, we’ve seen a significant improvement in crop production. Their eco-friendly practices and organic focus have allowed us to offer top-With Agriculturio’s guidance, we’ve seen</p>
+                    <p class="text-neutral-900 font-medium lg:text-xl">With WellHub’s guidance, we’ve seen a significant improvement in crop production. Their eco-friendly practices and organic focus have allowed us to offer top-With WellHub’s guidance, we’ve seen</p>
                   </div>
                 </div>
               </div>
@@ -659,7 +659,7 @@
                         ></path>
                       </svg>
                     </div>
-                    <p class="text-neutral-900 font-medium lg:text-xl">With Agriculturio’s guidance, we’ve seen a significant improvement in crop production. Their eco-friendly practices and organic focus have allowed us to offer top-With Agriculturio’s guidance, we’ve seen</p>
+                    <p class="text-neutral-900 font-medium lg:text-xl">With WellHub’s guidance, we’ve seen a significant improvement in crop production. Their eco-friendly practices and organic focus have allowed us to offer top-With WellHub’s guidance, we’ve seen</p>
                   </div>
                 </div>
               </div>
@@ -699,7 +699,7 @@
                         ></path>
                       </svg>
                     </div>
-                    <p class="text-neutral-900 font-medium lg:text-xl">With Agriculturio’s guidance, we’ve seen a significant improvement in crop production. Their eco-friendly practices and organic focus have allowed us to offer top-With Agriculturio’s guidance, we’ve seen</p>
+                    <p class="text-neutral-900 font-medium lg:text-xl">With WellHub’s guidance, we’ve seen a significant improvement in crop production. Their eco-friendly practices and organic focus have allowed us to offer top-With WellHub’s guidance, we’ve seen</p>
                   </div>
                 </div>
               </div>
@@ -721,7 +721,7 @@
           <img src="./assets/images/benefit1.webp" alt="" />
         </div>
         <div>
-          <p class="sub-heading mb-3 split_anim">Our Agriculturio</p>
+          <p class="sub-heading mb-3 split_anim">Our WellHub</p>
           <h2 class="mb-4 xl:mb-6 h1 reveal_anim">Fresh Organic Veggies At Our Store!</h2>
           <p class="mb-10 xl:mb-14 fade_anim" data-delay=".3">Discover our fresh organic veggies at Purely Fresh Dairy! We offer a variety of locally sourced, nutritious vegetables for your meals.</p>
           <a href="shop.html" class="btn-primary">buy now <i class="hgi-stroke hgi-arrow-up-right-01"></i></a>
@@ -849,9 +849,9 @@
     <!-- horizontal text animation start -->
     <section class="relative z-[1] pb-14 xl:pb-28">
       <div class="animated-text-strip reveal_anim" data-duration="1.5">
-        <span class="marquee big-text">AgriculturioAgriculturio</span>
-        <span class="marquee big-text">AgriculturioAgriculturio</span>
-        <span class="marquee big-text">AgriculturioAgriculturio</span>
+        <span class="marquee big-text">WellHubWellHub</span>
+        <span class="marquee big-text">WellHubWellHub</span>
+        <span class="marquee big-text">WellHubWellHub</span>
       </div>
     </section>
     <!-- horizontal text animation end -->
