--- a/src/index-3.html
+++ b/src/index-3.html
@@ -19,7 +19,7 @@
       <div class="max-w-[1800px] mx-auto flex justify-between items-center">
         <a href="./index.html">
           <img src="./assets/images/logo.png" class="max-sm:hidden" alt="" />
-          <img src="./assets/images/icon.png" class="sm:hidden" alt="" />
+          <img src="./assets/images/favicon.png" class="sm:hidden" alt="" />
         </a>
         <ul class="menu">
           <a href="index.html" class="flex mb-4 lg:hidden">
