--- a/src/index.html
+++ b/src/index.html
@@ -497,6 +497,24 @@
     </div>
     <!-- Counter section end -->
 
+    <!-- Contact Video section Start -->
+    <section class="contact-video">
+        <div class="cont">
+            <div class="flex items-center justify-center max-w-[526px] h-[630px] bg-green-300 xxl:px-10 px-5 py-10">
+              <div class="text-center">
+                  <p class="sub-heading m-auto bg-yellow-300 border-yellow-300 mb-4 text-neutral-800 fade_anim"><span class="bg-neutral-800 w-2 h-2 block rounded-full"></span> CONTACT</p>
+                  <h1 class="text-neutral-0 xl:mb-10 lg:mb-8 mb-7">If you need any Help?</h1>
+                  <img src="assets/images/element/contact-ele.png" alt="img" class="xl:mb-10 lg:mb-8 mb-7 text-center m-auto">
+                  <a href="services.html" class="bg-neutral-0 text-base hover:text-neutral-0 leading-1 font-semibold uppercase  inline-flex items-center gap-x-2 lg:gap-x-4 py-1.5 pe-2 ps-6 rounded-full learn-more duration-500 group hover:bg-neutral-600">
+                    CONTACT US
+                    <i class="hgi-stroke hgi-arrow-up-right-01 group-hover:text-neutral-600 duration-300 xl:text-xl text-lg text-neutral-0 xl:w-12 w-9 xl:h-12 h-9 flex items-center justify-center bg-yellow-300 group-hover:bg-yellow-300 rounded-full"></i>
+                  </a>
+              </div>
+            </div>
+        </div>    
+    </section>
+    <!-- Contact Video section end -->
+
 
 
 
